[gd_scene load_steps=8 format=3 uid="uid://d3ih2qk3pi8ou"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_iube1"]
[ext_resource type="PackedScene" uid="uid://b25stsw7tbqv1" path="res://scenes/game/game.tscn" id="1_kbx01"]
[ext_resource type="PackedScene" uid="uid://brw5qyf44k7ec" path="res://scenes/score/score.tscn" id="2_qer5e"]
[ext_resource type="PackedScene" uid="uid://dqndh6v0oonvw" path="res://scenes/skills/skills.tscn" id="4_78tsy"]
[ext_resource type="PackedScene" uid="uid://7tdcpd3vkwoq" path="res://scenes/popups/restart_game.tscn" id="5_k8x16"]
[ext_resource type="PackedScene" uid="uid://wrk40jpq40e4" path="res://scenes/popups/select_tile.tscn" id="6_djs5n"]
[ext_resource type="PackedScene" uid="uid://ckcsmldlj0vex" path="res://scenes/popups/open_chest.tscn" id="7_6cf5g"]

[node name="Main" type="Node2D"]
script = ExtResource("1_iube1")

[node name="MainCanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="MainCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
expand_mode = 4
stretch_mode = 6

[node name="SelectTilePopUp" parent="MainCanvasLayer" instance=ExtResource("6_djs5n")]
unique_name_in_owner = true
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="MainCanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -270.0
offset_top = -704.0
offset_right = 270.0
grow_horizontal = 2
grow_vertical = 0

[node name="ScoreMarginContainer" type="MarginContainer" parent="MainCanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Score" parent="MainCanvasLayer/VBoxContainer/ScoreMarginContainer" instance=ExtResource("2_qer5e")]
unique_name_in_owner = true
layout_mode = 2

[node name="GameMarginContainer" type="MarginContainer" parent="MainCanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(520, 520)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="MainCanvasLayer/VBoxContainer/GameMarginContainer"]
layout_mode = 2

[node name="Game" parent="MainCanvasLayer/VBoxContainer/GameMarginContainer" instance=ExtResource("1_kbx01")]
unique_name_in_owner = true
visibility_layer = 2
z_as_relative = false
custom_minimum_size = Vector2(520, 520)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SkillsMarginContainer" type="MarginContainer" parent="MainCanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="SkillButtons" parent="MainCanvasLayer/VBoxContainer/SkillsMarginContainer" instance=ExtResource("4_78tsy")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = null

[node name="PopUpCanvasLayer" type="CanvasLayer" parent="."]

[node name="OpenChestPopUp" parent="PopUpCanvasLayer" instance=ExtResource("7_6cf5g")]
unique_name_in_owner = true
visible = false
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RestartGamePopUp" parent="PopUpCanvasLayer" instance=ExtResource("5_k8x16")]
unique_name_in_owner = true
visible = false

[connection signal="chest_open" from="MainCanvasLayer/VBoxContainer/ScoreMarginContainer/Score" to="." method="_on_score_chest_open"]
[connection signal="score_signal" from="MainCanvasLayer/VBoxContainer/GameMarginContainer/Game" to="MainCanvasLayer/VBoxContainer/ScoreMarginContainer/Score" method="_on_game_score_signal"]
[connection signal="skill" from="MainCanvasLayer/VBoxContainer/GameMarginContainer/Game" to="MainCanvasLayer/VBoxContainer/SkillsMarginContainer/SkillButtons/HBoxContainer/UndoButton" method="_on_game_skill"]
[connection signal="remove" from="MainCanvasLayer/VBoxContainer/SkillsMarginContainer/SkillButtons/HBoxContainer/RemoveButton" to="MainCanvasLayer/VBoxContainer/GameMarginContainer/Game" method="_on_remove_button_remove"]
[connection signal="swap" from="MainCanvasLayer/VBoxContainer/SkillsMarginContainer/SkillButtons/HBoxContainer/SwapButton" to="MainCanvasLayer/VBoxContainer/GameMarginContainer/Game" method="_on_swap_button_swap"]
[connection signal="restart" from="MainCanvasLayer/VBoxContainer/SkillsMarginContainer/SkillButtons/HBoxContainer/RestartButton" to="." method="_on_restart_button_restart"]
[connection signal="gui_input" from="PopUpCanvasLayer/OpenChestPopUp" to="." method="_on_open_chest_pop_up_gui_input"]
[connection signal="restart_no" from="PopUpCanvasLayer/RestartGamePopUp" to="." method="_on_restart_game_pop_up_restart_no"]
[connection signal="restart_yes" from="PopUpCanvasLayer/RestartGamePopUp" to="." method="_on_restart_game_pop_up_restart_yes"]

[editable path="MainCanvasLayer/VBoxContainer/SkillsMarginContainer/SkillButtons"]
